# fintrack

./: CMakeLists.txt  Makefile  backtest.cc  backtest.h  constants.h  data_series.h  date.h  download_data.py  evaluation.cc  evaluation.h  gradient_descent.cc  gradient_descent.h  includes.h  loader.cc  loader.h  main.cc  make_3x.cc  make_3x.h  monte_carlo.cc  monte_carlo.cu  monte_carlo.h  neural_net.cc  neural_net.h  portfolio.cc  portfolio.h  problem.h  problem_prediction.cc  stochastic_optimization.cc  stochastic_optimization.h  tests.cc  tests.h  training.cc  training.h  training_all.sh  update_everything.sh  util.cc  util.h
financial_data/sectors/: sectors.csv
financial_data/test/: TEST.csv  TOST.csv
